[project]
name = "mdslice"
version = "0.2.0"
description = "Package to slicing, parsing, and manipulating Markdown Files"
readme = "README.md"
authors = [
    { name = "Altug Ataalp", email = "ataalpaltug@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ataalpaltug/mdslice"
Issues = "https://github.com/ataalpaltug/mdslice/issues"

[project.scripts]
mdslice = "mdslice:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nox>=2025.11.12",
    "pytest>=8.3.5",
    "ruff>=0.14.10",
]
